tests/reflect_span_removed_bad.stderr
error: failed to resolve package path /Users/rsms/src/hophop.alloc/reflect
tests/reflect_span_removed_bad.hop:2:1: error: HOP0000: failed to resolve import reflect
